vertical line and spacing at widest fixed

--- a/src/scss/components/_latest_posts.scss
+++ b/src/scss/components/_latest_posts.scss
@@ -1,3 +1,6 @@
+h1 {
+  background-color: Blue !important;
+}
 .wp-block-latest-posts__list {
   padding-left: 0;
   li {
@@ -60,64 +63,113 @@
   }
 }
 //  ------ ------ ----- Begin Grid Layout ------ ------ -----
-.wp-block-latest-posts__list.is-grid {
+
+li .wp-block-latest-posts__list.is-grid {
   padding-left: 0;
   display: flex;
   gap: 3rem 0;
   flex-flow: row wrap;
   position: relative;
-  justify-content: flex-end;
+  justify-content: flex-start;
 
   li {
     // border-right: 2px solid orange;
     // margin: 0 1.25em 1.25em 0;
     // width: 100%;
     padding: 4rem;
-    flex-basis: calc(100% - 0.625em);
-    flex-grow: 1;
+    width: calc(100% - 0.625em);
+    flex: 1 1 auto;
     margin-bottom: 1rem;
+    &:before {
+      content: "";
+      border: 1px solid $utorange;
+      position: absolute;
+      top: 15%;
+      height: 70%;
+      left: 0;
+    }
   }
 }
+
 @media (min-width: 768px) {
-  .wp-block-latest-posts__list.columns-2 {
+  .wp-block-latest-posts__list.is-grid.columns-2 {
+    padding-left: 0;
+    display: flex;
+    gap: 3rem 0;
+    flex-flow: row wrap;
+    position: relative;
+    justify-content: flex-start;
     li {
-      flex-basis: calc(40% - 0.625em);
-      &:nth-child(2n) {
+      padding: 4rem;
+      flex: 1 0 50%;
+      margin-bottom: 1rem;
+      &:before {
+        content: "";
+        border: 1px solid $utorange;
+        position: absolute;
+        top: 15%;
+        height: 70%;
+        left: 0;
+      }
+      &:nth-child(odd) {
         margin-right: 0;
-        position: relative;
         &:before {
-          content: "";
-          border: 1px solid $utorange;
-          position: absolute;
-          top: 15%;
-          height: 70%;
-          left: 0;
+          border: none;
         }
       }
     }
   } // end .columns-2
-  .wp-block-latest-posts__list.columns-3 {
+  .wp-block-latest-posts__list.is-grid.columns-3 {
+    padding-left: 0;
+    display: flex;
+    gap: 3rem 0;
+    flex-flow: row wrap;
+    position: relative;
+    justify-content: flex-start;
     li {
-      flex-basis: calc(30% - 0.625em);
-      &:nth-child(3n - 1),
-      &:nth-child(3n + 0) {
+      padding: 4rem;
+      flex: 1 0 33%;
+      margin-bottom: 1rem;
+      &:before {
+        content: "";
+        border: 1px solid $utorange;
+        position: absolute;
+        top: 15%;
+        height: 70%;
+        left: 0;
+      }
+      &:nth-child(3n + 1) {
         margin-right: 0;
-        position: relative;
         &:before {
+          border: none;
         }
       }
     }
   } // end .columns-3
-  .wp-block-latest-posts__list.columns-4 {
+  .wp-block-latest-posts__list.is-grid.columns-4 {
+    padding-left: 0;
+    display: flex;
+    gap: 3rem 0;
+    flex-flow: row wrap;
+    position: relative;
+    justify-content: flex-start;
     li {
-      flex-basis: calc(24% - 0.625em);
-      &:nth-child(4n + 2),
-      &:nth-child(4n + 3),
-      &:nth-child(4n + 4) {
+      padding: 4rem;
+      flex: 1 0 24%;
+      margin-bottom: 1rem;
+
+      &:before {
+        content: "";
+        border: 1px solid $utorange;
+        position: absolute;
+        top: 15%;
+        height: 70%;
+        left: 0;
+      }
+      &:nth-child(4n + 1) {
         margin-right: 0;
-        position: relative;
         &:before {
-          @extend .wp-block-latest-posts__list.columns-2 li &:before;
+          border: none;
         }
       }
     }
@@ -125,37 +177,58 @@
 }
 
 @media (min-width: 900px) {
-  .wp-block-latest-posts__list.columns-5 {
+  .wp-block-latest-posts__list.is-grid.columns-5 {
+    padding-left: 0;
+    display: flex;
+    gap: 3rem 0;
+    flex-flow: row wrap;
+    position: relative;
+    justify-content: flex-start;
     li {
-      flex-basis: calc(17% - 0.625em);
-      flex-grow: 1;
+      padding: 4rem;
+      flex: 1 0 17%;
       margin-bottom: 1rem;
-      &:nth-child(5n + 2),
-      &:nth-child(5n + 3),
-      &:nth-child(5n + 4),
-      &:nth-child(5n + 5) {
+      &:before {
+        content: "";
+        border: 1px solid $utorange;
+        position: absolute;
+        top: 15%;
+        height: 70%;
+        left: 0;
+      }
+
+      &:nth-child(5n + 1) {
         margin-right: 0;
-        position: relative;
         &:before {
-          @extend .wp-block-latest-posts__list.columns-2 li &:before;
+          border: none;
         }
       }
     }
   } // end .columns-5
   .wp-block-latest-posts__list.columns-6 {
+    padding-left: 0;
+    display: flex;
+    gap: 3rem 0;
+    flex-flow: row wrap;
+    position: relative;
+    justify-content: flex-start;
     li {
-      flex-basis: calc(19% - 0.625em);
-      flex-grow: 1;
+      padding: 4rem;
+      flex: 0 0 calc((100% - 20rem) / 6);
       margin-bottom: 1rem;
-      &:nth-child(6n + 2),
-      &:nth-child(6n + 3),
-      &:nth-child(6n + 4),
-      &:nth-child(6n + 5),
-      &:nth-child(6n + 6) {
+
+      &:before {
+        content: "";
+        border: 1px solid $utorange;
+        position: absolute;
+        top: 15%;
+        height: 70%;
+        left: 0;
+      }
+      &:nth-child(6n + 1) {
         margin-right: 0;
-        position: relative;
         &:before {
-          @extend .wp-block-latest-posts__list.columns-2 li &:before;
+          border: none;
         }
       }
     }
